k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kranz-tv
  labels:
    app: kranz-tv
spec:
  selector:
    app: kranz-tv
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
