k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kranz-tv
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kranz-tv.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kranz-tv
                port:
                  number: 80
